--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.14.1",
-    "react-native-svg": "^15.12.1"
+    "react-native-svg": "^15.12.1",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
